--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,4 +15,4 @@ jobs:
       - checkout
 
       # specify any bash command here prefixed with `run: `
-      - run: elm make
+      - run: elm make --yes
